# EEE4020F-Pracs

./: .zshrc  CMakeLists.txt  Makefile  README.md  README.txt  input.csv  main.c  output.csv
